Lesson 4: changed by comments
